# huffman-archive

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
experiments/: benchmark.cpp
experiments/data/: small.txt
include/: bitbuffer.h  decoder.h  encoder.h  format.h  huffman.h  tree.h
src/: bitbuffer.cpp  decoder.cpp  encoder.cpp  huffman.cpp  main.cpp  tree.cpp
tests/: test_bitbuffer.cpp  test_framework.cpp  test_framework.h  test_huffman.cpp  test_integration.cpp  test_main.cpp
